--- a/Content/style.css
+++ b/Content/style.css
@@ -13,11 +13,6 @@
     max-width: 700px;
     height: 100vh;
     margin: auto;
-    /* width: 100%;
-    background: rgba(255,255,255,0.75);
-    height: 75vh;
-    padding: 25px;
-    overflow:scroll; */
     padding: 3%;
 }
 
@@ -34,12 +29,12 @@ header {
 }
 
 p {
-    font-size: 20px;
-    line-height: 32px;
+    font-size: 18px;
+    line-height: 28px;
 }
 
 #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: #008299;
