--- a/Content/style.css
+++ b/Content/style.css
@@ -11,16 +11,18 @@
 #container {
     width: 100%;
     max-width: 700px;
-    height: 100vh;
     margin: auto;
     padding: 3%;
 }
 
 #main {
     width: 95%;
+    height: 75vh;
     background: rgba(255,255,255,0.75);
     padding: 20px;
-    overflow:scroll;
+    margin: 20%;
+    overflow-y:hidden;
+    overflow-x:hidden;
     margin: auto;
 }
 
@@ -28,23 +30,28 @@ header {
     display: none;
 }
 
+h1 {
+    font-size: 28px;
+}
+
 p {
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 #footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
     background-color: #008299;
     color: white;
     text-align: center;
-    padding-top: 10px;
+    width: 100%;
 }
 
 #footer a {
     color: black;
+}
+
+#footer i {
+    padding-top: 15px;
 }
 
 #footer a:hover {
