--- a/Content/style.css
+++ b/Content/style.css
@@ -1,4 +1,4 @@
-﻿#wrapper {
+#wrapper {
     width: 100%;
     height: 100vh;
     background-image: url('/Content/img/bg.jpg');
@@ -21,7 +21,7 @@
     background: rgba(255,255,255,0.75);
     padding: 20px;
     margin: 20%;
-    overflow-y:hidden;
+    overflow-y:scroll;
     overflow-x:hidden;
     margin: auto;
 }
