--- a/Content/style.css
+++ b/Content/style.css
@@ -21,7 +21,7 @@
     background: rgba(255,255,255,0.75);
     padding: 20px;
     margin: 20%;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
     margin: auto;
 }
